objects/xdo_dc_universal_360__c.object
<CustomObject>
    <fields>
        <fullName>External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>xdo_Label_for_Field_8__c</fullName>
        <label>Label for Field 8</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>xdo_dc_Field_10__c</fullName>
        <label>Field 10</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>xdo_dc_Field_11__c</fullName>
        <label>Field 11</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>xdo_dc_Field_12__c</fullName>
        <label>Field 12</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>xdo_dc_Field_15_Image__c</fullName>
        <label>Field 15 Image</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>xdo_dc_Field_16_Number__c</fullName>
        <label>Field 16 Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>xdo_dc_Field_17_Number__c</fullName>
        <label>Field 17 Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>xdo_dc_Field_18_Number__c</fullName>
        <label>Field 18 Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>xdo_dc_Field_2_Email__c</fullName>
        <label>Field 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>xdo_dc_Field_3_Phone__c</fullName>
        <label>Field 3</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>xdo_dc_Field_4_Address__c</fullName>
        <label>Field 4 Address</label>
        <type>Address</type>
    </fields>
    <fields>
        <fullName>xdo_dc_Header_Subtitle__c</fullName>
        <label>Header Subtitle</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>xdo_dc_Icon_For_Field_10__c</fullName>
        <label>Icon For Field 10</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>xdo_dc_Icon_for_Field_11__c</fullName>
        <label>Icon for Field 11</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>xdo_dc_Icon_for_Field_12__c</fullName>
        <label>Icon for Field 12</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>xdo_dc_Icon_for_Field_16_Number__c</fullName>
        <label>Icon for Field 16 Number</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>xdo_dc_Icon_for_Field_2_Email__c</fullName>
        <label>Icon for Field 2 Email</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>xdo_dc_Icon_for_Field_3_Phone__c</fullName>
        <label>Icon for Field 3 Phone</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>xdo_dc_Icon_for_Field_4_Address__c</fullName>
        <label>Icon for Field 4 Address</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>xdo_dc_Icon_for_Field_6_Number__c</fullName>
        <label>Icon for Field 6 Number</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>xdo_dc_Icon_for_Universal_360_Name__c</fullName>
        <label>Image for Universal 360 Name</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>xdo_dc_Label_for_Field_10__c</fullName>
        <label>Label for Field 10</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>xdo_dc_Label_for_Field_11__c</fullName>
        <label>Label for Field 11</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>xdo_dc_Label_for_Field_12__c</fullName>
        <label>Label for Field 12</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>xdo_dc_Label_for_Field_16_Number__c</fullName>
        <label>Label for Field 16 Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>xdo_dc_Label_for_Field_2_Email__c</fullName>
        <label>Label for Field 2 Email</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>xdo_dc_Label_for_Field_3_Phone__c</fullName>
        <label>Label for Field 3 Phone</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>xdo_dc_Label_for_Field_4_Address__c</fullName>
        <label>Label for Field 4 Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>xdo_dc_Label_for_Field_6_Number__c</fullName>
        <label>Label for Field 6 Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>xdo_dc_Progress_bar_for_Field_17__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Progress bar for Field 17</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>xdo_dc_Progress_bar_for_Field_18__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Progress bar for Field 18</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>xdo_dc_Progress_bar_for_Field_19__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Progress bar for Field 19</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>xdo_dc_Section_1_Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Section 1 Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>xdo_dc_Section_2_Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Section 2 Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>xdo_dc_Section_3_Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Section 3 Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>xdo_dc_Section_KPI_Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Section KPI Active</label>
        <type>Checkbox</type>
    </fields>
    <label>Universal 360</label>
    <nameField>
        <label>Universal 360 Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Universal 360s</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>